--- a/Python/Data_Collecter.ipynb
+++ b/Python/Data_Collecter.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Twitch API Client-ID 불러오기\n",
+    "apikey = ''\n",
+    "with open('apikey.txt', mode='r') as f:\n",
+    "    apikey = f.read()\n",
+    "print(apikey)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +53,7 @@
     "for idx, item in enumerate(streamer_list):\n",
     "    try:\n",
     "        url = \"https://api.twitch.tv/helix/users?login=\" + item\n",
-    "        req = urllib.request.Request(url, headers = {\"Client-ID\": \"uhhst6xz5g8zzk6eg32ppoevy360y6\"})\n",
+    "        req = urllib.request.Request(url, headers = {\"Client-ID\": apikey})\n",
     "        u = urllib.request.urlopen(req)\n",
     "    except:\n",
     "        continue\n",
@@ -150,7 +163,7 @@
     "for sid in sid_list:\n",
     "    try:\n",
     "        url = \"https://api.twitch.tv/helix/videos?user_id=\" + str(sid)\n",
-    "        req = urllib.request.Request(url, headers = {\"Client-ID\": \"uhhst6xz5g8zzk6eg32ppoevy360y6\"})\n",
+    "        req = urllib.request.Request(url, headers = {\"Client-ID\": apikey})\n",
     "        u = urllib.request.urlopen(req)\n",
     "    except:\n",
     "        print('error point id: {}'.format(sid))\n",
@@ -331,7 +344,7 @@
     "                url = 'https://api.twitch.tv/kraken/videos/'+str(video_id)+'/comments'\n",
     "            else:\n",
     "                url = 'https://api.twitch.tv/kraken/videos/'+str(video_id)+'/comments?cursor='+str(cursor)\n",
-    "            req = urllib.request.Request(url, headers = {\"Client-ID\": \"uhhst6xz5g8zzk6eg32ppoevy360y6\",\n",
+    "            req = urllib.request.Request(url, headers = {\"Client-ID\": apikey,\n",
     "                                                         \"Accept\" : \"application/vnd.twitchtv.v5+json\"})\n",
     "            u = urllib.request.urlopen(req)\n",
     "            c = u.read().decode('utf-8')\n",
